Feature/5 register account (#6)
* add register(enroll) skeleton

* implement interpreter

* add h2 as snapshot's backend db

* add `cmd createAccount`

* fix function for bytes to hex

* collect some idea

* open NymphSpec

* add p2p

* add Address to node

* select logback conf file at ArgsHandler runing

* `register` of Nymph service completed

* add Nymph server usage

* add log