@@ -96,21 +96,48 @@ object Common {
           )
 
       def apply(id: String): Project = apply(id, id)
-      def apply(): Project = apply("ast")
+      def apply(): Project           = apply("ast")
     }
 
     object jsonrpc {
       def apply(id: String, dir: String): Project =
         Project(id, file(dir))
-        .settings(settings)
-        .settings(
-          libraryDependencies ++= all.cats,
-          libraryDependencies ++= all.http4s,
-          libraryDependencies ++= all.circe
-        )
+          .settings(settings)
+          .settings(
+            libraryDependencies ++= all.cats,
+            libraryDependencies ++= all.http4s,
+            libraryDependencies ++= all.circe
+          )
 
       def apply(id: String): Project = apply(id, id)
-      def apply(): Project = apply("jsonrpc")
+      def apply(): Project           = apply("jsonrpc")
     }
+
+    object interpreter {
+      def apply(id: String, dir: String): Project =
+        Project(id, file(dir))
+          .settings(settings)
+          .settings(
+            libraryDependencies ++= all.cats,
+            libraryDependencies ++= all.bcprov,
+            libraryDependencies ++= all.h2,
+            libraryDependencies ++= all.circe,
+            libraryDependencies ++= all.scalecube,
+            libraryDependencies ++= all.betterfiles
+          )
+      def apply(id: String): Project = apply(id, id)
+      def apply(): Project           = apply("interpreter")
+    }
+  }
+
+  val defaultShellScript: Seq[String] = defaultShellScript(
+    Seq(
+      "-Dio.netty.tryReflectionSetAccessible=true"
+    )
+  )
+
+  def defaultShellScript(javaOpts: Seq[String] = Seq.empty): Seq[String] = {
+    val javaOptsString = javaOpts.map(_ + " ").mkString
+    Seq("#!/usr/bin/env sh", s"""exec java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -jar $javaOptsString$$JAVA_OPTS "$$0" "$$@"""", "")
   }
 }
